--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
         <h1>My Magic Notes</h1>
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Add a Note</h5>
+                <h5 class="card-title">Add title</h5>
+                <div class="input-group mb-3">
+                    <input type="text" class="addTitle form-control" id="addTitle" placeholder="Add Title" aria-label="Add Title" aria-describedby="basic-addon1">
+                </div>
                 <div class="form-group">
+                    
+                    <h5 class="card-title">Add note</h5>
                     <textarea class="form-control" id="addTxt" rows="3"></textarea>
                   </div>
                 <button class="btn btn-primary" id="addBtn">Add Note</button>
